# KlonCentaur

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  ChowCentaur.jucer  README.md  ios_build.sh  mac_builds.sh  setup.sh  test.sh  validate.sh  win_builds.sh
.github/: FUNDING.yml
.github/workflows/: auto-format.yml  benchmark.yml  cmake.yml  ios.yml
CentaurBench/: CMakeLists.txt  Main.cpp
ChowCentaur/: BypassProcessor.h  CMakeLists.txt  ChowCentaurPlugin.cpp  ChowCentaurPlugin.h  ComboBoxLNF.h  CustomLNFs.h  GainStageMLProc.cpp  GainStageMLProc.h  GainStageProc.cpp  GainStageProc.h  gui.xml  pch.h
ChowCentaur/CommonProcessors/: InputBufferProcessor.h  InputBufferWDF.h  OutputStageProcessor.h  OutputStageWDF.h  ToneFilterProcessor.cpp  ToneFilterProcessor.h
ChowCentaur/GainStageML/: GainStageMLProc.cpp  GainStageMLProc.h  RNNModel.cpp  RNNModel.h
ChowCentaur/GainStageProcessors/: AmpStage.h  ClippingStage.cpp  ClippingStage.h  DiodePair.h  FeedForward2.cpp  FeedForward2.h  GainStageProc.cpp  GainStageProc.h  PreAmpStage.h  SummingAmp.h
ChowCentaur/Models/: Model_gain0.h  Model_gain100.h  Model_gain100_8.h  Model_gain25.h  Model_gain50.h  Model_gain75.h  RoughModel.h
ChowCentaur/SharedCode/: CMakeLists.txt  InputBufferProcessor.h  InputBufferWDF.h  OutputStageWDF.h  SharedJuceHeader.h  ToneFilterProcessor.h
ChowCentaur/gui/: CMakeLists.txt  CustomLNFs.h  MyLNF.cpp  MyLNF.h  TipJar.cpp  TipJar.h
ChowCentaur/headless/: CMakeLists.txt  bench_analysis.py  benchmarks.h  main.cpp  screenshots.h
ChowCentaur/res/: gui.xml  gui_ios.xml
GainStage/: AmpStage.h  CMakeLists.txt  ClippingStage.h  FeedForward2.h  PreAmpStage.h  SummingAmp.h
GainStageML/: RNN_gain0.ipynb  RNN_gain100.ipynb  RNN_gain25.ipynb  RNN_gain50.ipynb  RNN_gain75.ipynb  genSamples.py
GainStageML/Models/: RNN_gain0.h5  RNN_gain100.h5  RNN_gain25.h5  RNN_gain50.h5  RNN_gain75.h5
GainStageML/SPICE/: GainStage2.asc  GainStage2_zzz.asc
GainStageML/Samples/: sample0.mat  sample1.mat  sample10.mat  sample100.mat  sample101.mat  sample102.mat  sample103.mat  sample104.mat  sample105.mat  sample106.mat  sample107.mat  sample108.mat  sample109.mat  sample11.mat  sample110.mat  sample111.mat  sample112.mat  sample113.mat  sample114.mat  sample115.mat  sample116.mat  sample117.mat  sample118.mat  sample119.mat  sample12.mat  sample120.mat  sample121.mat  sample122.mat  sample123.mat  sample124.mat  sample125.mat  sample126.mat  sample127.mat  sample128.mat  sample129.mat  sample13.mat  sample130.mat  sample131.mat  sample132.mat  sample133.mat  (+203 more)
GainStageML/Samples2/: sample0.mat  sample1.mat  sample10.mat  sample100.mat  sample101.mat  sample102.mat  sample103.mat  sample104.mat  sample105.mat  sample106.mat  sample107.mat  sample108.mat  sample109.mat  sample11.mat  sample110.mat  sample111.mat  sample112.mat  sample113.mat  sample114.mat  sample115.mat  sample116.mat  sample117.mat  sample118.mat  sample119.mat  sample12.mat  sample120.mat  sample121.mat  sample122.mat  sample123.mat  sample124.mat  sample125.mat  sample126.mat  sample127.mat  sample128.mat  sample129.mat  sample13.mat  sample130.mat  sample131.mat  sample132.mat  sample133.mat  (+360 more)
GainStageML/SineSamples/: sample0.mat  sample1.mat  sample10.mat  sample11.mat  sample12.mat  sample13.mat  sample14.mat  sample15.mat  sample16.mat  sample17.mat  sample18.mat  sample19.mat  sample2.mat  sample20.mat  sample21.mat  sample22.mat  sample23.mat  sample24.mat  sample25.mat  sample26.mat  sample27.mat  sample28.mat  sample29.mat  sample3.mat  sample30.mat  sample31.mat  sample32.mat  sample33.mat  sample34.mat  sample35.mat  sample36.mat  sample37.mat  sample38.mat  sample39.mat  sample4.mat  sample40.mat  sample41.mat  sample42.mat  sample43.mat  sample44.mat  (+41 more)
GainStageTraining/: RNN_gain50.ipynb  SPICESim.py  centaur.py  genSamples.py  losses.py  model.py  utils.py
GainStageTraining/SPICE/: GainStage2.asc
GainStageTraining/models/: centaur.json  centaur_0.json  centaur_100.json  centaur_25.json  centaur_50.json  centaur_75.json  centaur_history.txt  centaur_large.json  centaur_large_history.txt  centaur_small.json  centaur_small_history.txt
InputBuffer/: CMakeLists.txt  InputBufferPlugin.cpp  InputBufferPlugin.h  InputBufferProcessor.h  InputBufferWDF.h
Installers/mac/: ChowCentaur.pkgproj  Intro.txt  build_mac_installer.sh
Installers/windows/: ChowCentaur_Install_Script.iss  build_win_installer.sh
OutputStage/: CMakeLists.txt  OutputStagePlugin.h  OutputStageProcessor.h  OutputStageWDF.h
Paper/: Klon_Model.tex  dafx_19.sty  references.bib
SharedCode/: AmpStage.h  BilinearTools.h  CMakeLists.txt  ClippingStage.h  FeedForward2.cpp  FeedForward2.h  GainStageML.h  IIRFilter.h  InputBufferProcessor.cpp  InputBufferProcessor.h  InputBufferWDF.h  Json2RnnParser.cpp  Json2RnnParser.h  OutputStageProcessor.cpp  OutputStageProcessor.h  OutputStageWDF.h  PluginBase.h  PreAmpStage.cpp  PreAmpStage.h  SharedJuceHeader.h  SummingAmp.h  ToneFilterProcessor.cpp  ToneFilterProcessor.h
SharedCode/MLUtils/: CMakeLists.txt  Layer.h  Model.h  activation.h  dense.h  dense_eigen.h  gru.cpp  gru.h  gru_eigen.cpp  gru_eigen.h
Slides/: beamercolorthemeauriga.sty  present-blx.bib  present.tex  slides.tex
Slides/Slides/: Implementation.tex  Intro.tex  Nodal.tex  RNN.tex  WDF.tex
Slides/Slides/Neural/: Previous.tex  RNN.tex  (+2 more)
SubCircuits/: CMakeLists.txt  input_buffer.py
SubCircuits/FeedForward1/: analysis.py
SubCircuits/GainStage/: CMakeLists.txt  GainStagePlugin.cpp  GainStagePlugin.h  simulation.py
SubCircuits/InputBuffer/: CMakeLists.txt  InputBufferPlugin.cpp
SubCircuits/OutputStage/: CMakeLists.txt  OutputStagePlugin.cpp
SubCircuits/ToneFilter/: CMakeLists.txt  ToneFilterPlugin.cpp  ToneFilterPlugin.h  simulation.py
TeensyCentaur/: .gitignore  README.md  makefile
TeensyCentaur/src/: main.cpp
ToneFilter/: CMakeLists.txt  ToneFilterPlugin.cpp  ToneFilterProcessor.h  simulation.py
modules/: CMakeLists.txt
modules/cmake/: WarningFlags.cmake
modules/toms917/: CMakeLists.txt  toms917.cpp  toms917.hpp
(+23 files in other folders)
